# wordle

./: .gitignore  Cargo.toml  index.html  manifest.json  sw.js  wordle.js  wordle_bg.wasm  wordlist
examples/: wiktionary_check.rs  wiktionary_download.rs  wiktionary_parse.rs
src/: app.rs  lib.rs  main.rs  statistics.rs  wordlist.rs
wordlists/: wordlist_german  words_wiktionary_de_checked
