[package]
name = "wordle"
version = "0.1.0"
edition = "2024"


[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[dependencies]
eframe = { version = "0.31.1", features = [
    "persistence",
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
egui = "0.31.1"
egui_tabs = "0.2.1"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
log = "0.4.27"
rand = { version = "0.9.1", features = ["small_rng"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"              # to access the DOM (to hide the loading text)

[profile.dev.package."*"]
opt-level = 2

[dev-dependencies]
reqwest = { version = "0.12.19", features = ["blocking"] }
